<resources>
    <string name="app_name">OtterAirways</string>
    <string name="action_settings">Settings</string>
    <string name="create_account">Create Account</string>
    <string name="reserve_seat">Reserve Seat</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="manage_system">Manage System</string>
    <string name="invalid_username_password">User name or password is invalid.</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="requirement">Username and password must have at least three letters and three numbers</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="main_menu">Back to Main Menu</string>
    <string name="new_flight">Add New Flight</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="number_tickets">Number of tickets</string>
    <string name="search_flights">Search Flights</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="flight_number">Flight Number</string>
    <string name="otter_hint">Otter###</string>
    <string name="departure_hint">Monterey</string>
    <string name="arrival_hint">Seattle</string>
    <string name="departure_time">Departure Time</string>
    <string name="departure_time_hint">10:00(AM)</string>
    <string name="capacity">Capacity</string>
    <string name="capacity_hint">10</string>
    <string name="price">Price</string>
    <string name="price_hint">100</string>
    <string name="add_flight">Add Flight</string>
    <string name="taken_username">Username already taken</string>
</resources>
